--- a/src/EnqueueIt.Sql/EnqueueIt.Sql.csproj
+++ b/src/EnqueueIt.Sql/EnqueueIt.Sql.csproj
@@ -4,7 +4,7 @@
     <Title>EnqueueIt.Sql</Title>
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
-    <Version>0.3.1</Version>
+    <Version>0.3.2</Version>
     <Authors>Ahmed Abudaqqa</Authors>
     <Product>EnqueueIt.Sql</Product>
     <Company>Cyber Cloud Systems LLC</Company>
@@ -23,9 +23,12 @@
     <DeterministicSourcePaths>true</DeterministicSourcePaths>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <EnablePackageValidation>true</EnablePackageValidation>
+    <RestoreAdditionalProjectSources>
+      https://nuget.cybercloudsys.com/v3/index.json
+    </RestoreAdditionalProjectSources>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EnqueueIt" Version="0.3.1" />
+    <PackageReference Include="EnqueueIt" Version="0.3.2" />
     <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
